--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
     <div class="okno">
-        <img class="lico" src="assets/images/шастик.png">
-        <img class="oblako" src="assets/images/облако .png">
-        <img class="krug" src="assets/images/цветовой круг.png">
+        <img class="lico" src="Assets/Images/шастик.png">
+        <img class="oblako" src="Assets/Images/облако .png">
+        <img class="krug" src="Assets/Images/цветовой круг.png">
         <div class="voblake">
             <p align="center">Тебе надо найти</p>
             <p align="center">карточки с одинаковыми</p>
